Supports html_ci: false for examples, implement in failures

--- a/test/wv/html_fixtures/download_and_show_image.html
+++ b/test/wv/html_fixtures/download_and_show_image.html
@@ -4,7 +4,6 @@
     <p id="5" style="font-size:12px">Enter URL and press Enter:</p>
     <input id="6" oninput="scarpeHandler('6-change', this.value)" />
     <p id="7" style="font-size:14px">here is a cute cat url: https://img.freepik.com/premium-photo/funny-smart-cat-professor-with-glasses-illustration-generative-ai_845977-709.jpg?w=700&h=300</p>
-    <button id="8" onclick="scarpeHandler('8-click')" onmouseover="scarpeHandler('8-hover')" style="background-color:#3d5a80;padding-top:8;padding-bottom:8;color:white;font-size:16">Download Image!</button></div>
-  <div id="root-fonts"></div>
+    <button id="8" onclick="scarpeHandler('8-click')" onmouseover="scarpeHandler('8-hover')" style="padding-top:8;padding-bottom:8;background-color:#3d5a80;color:white;font-size:16">Download Image!</button></div>  <div id="root-fonts"></div>
   <div id="root-alerts"> </div>
 </div>
