--- a/test/wv/html_fixtures/gen.html
+++ b/test/wv/html_fixtures/gen.html
@@ -12,7 +12,6 @@
     <div id="13" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:400px;margin-bottom:8px">
       <p id="14" style="font-size:12px">Which type of class file template do you want to generate:</p>
       <select id="15" onchange="scarpeHandler('15-change', this.options[this.selectedIndex].value)"><option value="Shapes">Shapes</option><option value="Event Bind">Event Bind</option><option value="Basic">Basic</option></select></div>
-    <button id="16" onclick="scarpeHandler('16-click')" onmouseover="scarpeHandler('16-hover')" style="background-color:#FF7116;padding-top:8;padding-bottom:8;color:white;font-size:16">Generate Files!</button></div>
-  <div id="root-fonts"></div>
+    <button id="16" onclick="scarpeHandler('16-click')" onmouseover="scarpeHandler('16-hover')" style="padding-top:8;padding-bottom:8;background-color:#FF7116;color:white;font-size:16">Generate Files!</button></div>  <div id="root-fonts"></div>
   <div id="root-alerts"> </div>
 </div>
