--- a/test/wv/html_fixtures/simple_slides.html
+++ b/test/wv/html_fixtures/simple_slides.html
@@ -1,7 +1,7 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
   <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;border-style:solid;border-width:2px;border-radius:0px;border-color:rgba(0, 0, 0, 255)"></div>
   <button id="4" onclick="scarpeHandler('4-click')" onmouseover="scarpeHandler('4-hover')">Previous Slide</button><button id="5" onclick="scarpeHandler('5-click')" onmouseover="scarpeHandler('5-hover')">Next Slide</button>
-  <p id="7" style="font-size:12px"><strong>Slide 1: Welcome to Shoes!</strong></p>
+  <p id="7" style="margin-bottom:10px;font-size:12px"><strong>Slide 1: Welcome to Shoes!</strong></p>
   <p id="8" style="font-size:12px">Ah, yeah, Shoes!<br>
           Who said nobody knows Shoes? Well, let me introduce you to a feline expert in the art of Ruby Desktop GUI Libs.<br>
     <br>
