Various fixes related to getting the ovals demo working better.
Fix and test stroke and fill for art drawables.
Fix absolute positioning to be relative to nearest enclosing slot.
Fix stroke and fill to convert colors to hex-RGB properly.
Fix span to not use html_attributes, which it was mostly doing incorrectly anyway.

Note that a number of the fixtures changes are to switch back and forth between black and #000000.
That's not great, and it's an artifact of how we default colors in several places.
Once we have colors in a component I think we'll want to always output RGB hex format,
which will take care of that problem. In the mean time, I'm keeping a lot of code that's
already in place.

--- a/test/wv/html_fixtures/margin_check.html
+++ b/test/wv/html_fixtures/margin_check.html
@@ -1,8 +1,18 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%;background:rgba(0, 0, 255, 255)">
-  <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100px;height:100px;background:rgba(255, 0, 0, 255)"><button id="4" onclick="scarpeHandler('4-click')" onmouseover="scarpeHandler('4-hover')" style="margin-left:10px;margin-right:5px;margin-top:25px;margin-bottom:10px">Push me</button></div>
-  <div id="5" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;background:rgba(127, 255, 212, 255)"><button id="6" onclick="scarpeHandler('6-click')" onmouseover="scarpeHandler('6-hover')" style="margin-left:10px;margin-right:5px;margin-top:25px;margin-bottom:10px">Hash margin</button></div>
-  <div id="7" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100px;height:100px;background:rgba(255, 255, 0, 255)"><button id="8" onclick="scarpeHandler('8-click')" onmouseover="scarpeHandler('8-hover')" style="margin:5px;margin-top:30px">Middle Button</button></div>
-  <div id="9" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100px;height:100px;background:rgba(0, 128, 0, 255)"><button id="10" onclick="scarpeHandler('10-click')" onmouseover="scarpeHandler('10-hover')">OK 2</button></div>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
+  <div style="height:100%;width:100%;position:relative">
+    <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100px;height:100px;background:rgba(255, 0, 0, 255)">
+      <div style="height:100%;width:100%;position:relative"><button id="4" onclick="scarpeHandler('4-click')" onmouseover="scarpeHandler('4-hover')" style="margin-left:10px;margin-right:5px;margin-top:25px;margin-bottom:10px">Push me</button></div>
+    </div>
+    <div id="5" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;background:rgba(127, 255, 212, 255)">
+      <div style="height:100%;width:100%;position:relative"><button id="6" onclick="scarpeHandler('6-click')" onmouseover="scarpeHandler('6-hover')" style="margin-left:10px;margin-right:5px;margin-top:25px;margin-bottom:10px">Hash margin</button></div>
+    </div>
+    <div id="7" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100px;height:100px;background:rgba(255, 255, 0, 255)">
+      <div style="height:100%;width:100%;position:relative"><button id="8" onclick="scarpeHandler('8-click')" onmouseover="scarpeHandler('8-hover')" style="margin:5px;margin-top:30px">Middle Button</button></div>
+    </div>
+    <div id="9" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100px;height:100px;background:rgba(0, 128, 0, 255)">
+      <div style="height:100%;width:100%;position:relative"><button id="10" onclick="scarpeHandler('10-click')" onmouseover="scarpeHandler('10-hover')">OK 2</button></div>
+    </div>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
+  </div>
 </div>
