--- a/test/wv/html_fixtures/timmy.html
+++ b/test/wv/html_fixtures/timmy.html
@@ -1,41 +1,63 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%;background:black">
-  <div id="3" style="text-align:center;width:100%">
-    <p style="color:#FF0000;font-size:48px">You've downloaded a virus!</p>
-  </div>
-  <div id="4" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:30%">
-    <div id="5" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;background:white">
-      <div id="6" style="text-align:center;width:100%">
-        <p style="font-size:34px">You thought this was a recipe for cookies, but it was me, your arch nemesis!<br>
-          <br>
-        </p>
-      </div>
-      <div id="7" style="text-align:center;width:100%">
-        <p style="font-size:30px">I have taken over your computer and will not give it back until you pay me $1,000,000.</p>
-      </div>
+  <div style="height:100%;width:100%;position:relative">
+    <div id="3" style="text-align:center;width:100%">
+      <p style="color:#FF0000;font-size:48px">You've downloaded a virus!</p>
     </div>
-  </div>
-  <div id="8" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:30%">
-    <div id="9" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:33.33%;background:blue">
-      <div id="10" style="position:absolute;top:100px;left:230px"><svg width="150.0" height="150.0" style="fill:black"><polygon points="150.0,75.0,96.65063509461098,87.5,112.5,139.9519052838329,75.0,100.0,37.500000000000014,139.9519052838329,53.34936490538904,87.50000000000001,0.0,75.00000000000001,53.34936490538903,62.50000000000001,37.499999999999964,10.048094716167128,75.0,50.0,112.49999999999994,10.048094716167071,96.65063509461096,62.499999999999986" style="stroke:black;stroke-width:2" /></svg></div>
-    </div>
-    <div id="11" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:33.33%;background:white">
-      <div id="12" style="text-align:center;width:100%">
-        <p style="font-size:30px">Pay me now or I will delete all your files!<br>
-          Courtesy, the Pirates of the Highlands 🏴‍☠️</p>
-      </div>
-      <div id="13" style="text-align:center;width:100%">
-        <p style="font-size:48px">💰</p>
+    <div id="4" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:30%">
+      <div style="height:100%;width:100%;position:relative">
+        <div id="5" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;background:white">
+          <div style="height:100%;width:100%;position:relative">
+            <div id="6" style="text-align:center;width:100%">
+              <p style="font-size:34px">You thought this was a recipe for cookies, but it was me, your arch nemesis!<br>
+                <br>
+              </p>
+            </div>
+            <div id="7" style="text-align:center;width:100%">
+              <p style="font-size:30px">I have taken over your computer and will not give it back until you pay me $1,000,000.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div id="14" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:33.33%;background:blue">
-      <div id="15" style="position:absolute;top:100px;left:230px"><svg width="150.0" height="150.0" style="fill:black"><polygon points="150.0,75.0,96.65063509461098,87.5,112.5,139.9519052838329,75.0,100.0,37.500000000000014,139.9519052838329,53.34936490538904,87.50000000000001,0.0,75.00000000000001,53.34936490538903,62.50000000000001,37.499999999999964,10.048094716167128,75.0,50.0,112.49999999999994,10.048094716167071,96.65063509461096,62.499999999999986" style="stroke:black;stroke-width:2" /></svg></div>
+    <div id="8" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:30%">
+      <div style="height:100%;width:100%;position:relative">
+        <div id="9" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:33.33%;background:blue">
+          <div style="height:100%;width:100%;position:relative">
+            <div id="10" style="position:absolute;top:100px;left:230px"><svg width="150.0" height="150.0" style="fill:black"><polygon points="150.0,75.0,96.65063509461098,87.5,112.5,139.9519052838329,75.0,100.0,37.500000000000014,139.9519052838329,53.34936490538904,87.50000000000001,0.0,75.00000000000001,53.34936490538903,62.50000000000001,37.499999999999964,10.048094716167128,75.0,50.0,112.49999999999994,10.048094716167071,96.65063509461096,62.499999999999986" style="stroke:black;stroke-width:2" /></svg></div>
+          </div>
+        </div>
+        <div id="11" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:33.33%;background:white">
+          <div style="height:100%;width:100%;position:relative">
+            <div id="12" style="text-align:center;width:100%">
+              <p style="font-size:30px">Pay me now or I will delete all your files!<br>
+                Courtesy, the Pirates of the Highlands 🏴‍☠️</p>
+            </div>
+            <div id="13" style="text-align:center;width:100%">
+              <p style="font-size:48px">💰</p>
+            </div>
+          </div>
+        </div>
+        <div id="14" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:33.33%;background:blue">
+          <div style="height:100%;width:100%;position:relative">
+            <div id="15" style="position:absolute;top:100px;left:230px"><svg width="150.0" height="150.0" style="fill:black"><polygon points="150.0,75.0,96.65063509461098,87.5,112.5,139.9519052838329,75.0,100.0,37.500000000000014,139.9519052838329,53.34936490538904,87.50000000000001,0.0,75.00000000000001,53.34936490538903,62.50000000000001,37.499999999999964,10.048094716167128,75.0,50.0,112.49999999999994,10.048094716167071,96.65063509461096,62.499999999999986" style="stroke:black;stroke-width:2" /></svg></div>
+          </div>
+        </div>
+      </div>
     </div>
+    <div id="16" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:30%">
+      <div style="height:100%;width:100%;position:relative">
+        <div id="17" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:33.33%">
+          <div style="height:100%;width:100%;position:relative"><img id="18" src="https://i.imgur.com/mIaqQaF.png" /></div>
+        </div>
+        <div id="19" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:33.33%">
+          <div style="height:100%;width:100%;position:relative"><button id="20" onclick="scarpeHandler('20-click')" onmouseover="scarpeHandler('20-hover')" style="width:335px;height:300px;font-size:80px">Pay up 💸</button></div>
+        </div>
+        <div id="21" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:33.33%">
+          <div style="height:100%;width:100%;position:relative"><img id="22" src="https://i.imgur.com/mIaqQaF.png" /></div>
+        </div>
+      </div>
+    </div>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
   </div>
-  <div id="16" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:30%">
-    <div id="17" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:33.33%"><img id="18" src="https://i.imgur.com/mIaqQaF.png" /></div>
-    <div id="19" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:33.33%"><button id="20" onclick="scarpeHandler('20-click')" onmouseover="scarpeHandler('20-hover')" style="width:335px;height:300px;font-size:80px">Pay up 💸</button></div>
-    <div id="21" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:33.33%"><img id="22" src="https://i.imgur.com/mIaqQaF.png" /></div>
-  </div>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
 </div>
