--- a/test/wv/html_fixtures/animate.html
+++ b/test/wv/html_fixtures/animate.html
@@ -1,12 +1,16 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start">
-    <p id="4" style="font-size:12px">10 fps</p>
-    <p id="5" style="font-size:12px">-</p>
-    <p id="7" style="font-size:12px">20 fps</p>
-    <p id="8" style="font-size:12px">-</p>
-    <p id="10" style="font-size:12px">3spf</p>
-    <p id="11" style="font-size:12px">-</p>
+  <div style="height:100%;width:100%;position:relative">
+    <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start">
+      <div style="height:100%;width:100%;position:relative">
+        <p id="4" style="font-size:12px">10 fps</p>
+        <p id="5" style="font-size:12px">-</p>
+        <p id="7" style="font-size:12px">20 fps</p>
+        <p id="8" style="font-size:12px">-</p>
+        <p id="10" style="font-size:12px">3spf</p>
+        <p id="11" style="font-size:12px">-</p>
+      </div>
+    </div>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
   </div>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
 </div>
