--- a/test/wv/html_fixtures/clear_and_append.html
+++ b/test/wv/html_fixtures/clear_and_append.html
@@ -1,9 +1,15 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start"><button id="4" onclick="scarpeHandler('4-click')" onmouseover="scarpeHandler('4-hover')">More Stuff!</button><button id="5" onclick="scarpeHandler('5-click')" onmouseover="scarpeHandler('5-hover')">No Stuff!</button><button id="6" onclick="scarpeHandler('6-click')" onmouseover="scarpeHandler('6-hover')">Different Stuff!</button>
-    <div id="7" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
-      <p id="8" style="font-size:12px">Good Morning</p>
+  <div style="height:100%;width:100%;position:relative">
+    <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start">
+      <div style="height:100%;width:100%;position:relative"><button id="4" onclick="scarpeHandler('4-click')" onmouseover="scarpeHandler('4-hover')">More Stuff!</button><button id="5" onclick="scarpeHandler('5-click')" onmouseover="scarpeHandler('5-hover')">No Stuff!</button><button id="6" onclick="scarpeHandler('6-click')" onmouseover="scarpeHandler('6-hover')">Different Stuff!</button>
+        <div id="7" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
+          <div style="height:100%;width:100%;position:relative">
+            <p id="8" style="font-size:12px">Good Morning</p>
+          </div>
+        </div>
+      </div>
     </div>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
   </div>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
 </div>
