--- a/test/wv/html_fixtures/get_headers.html
+++ b/test/wv/html_fixtures/get_headers.html
@@ -1,8 +1,12 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start">
-    <p id="4" style="font-size:16px">Searching</p>
-    <p id="5" style="font-size:12px">One moment...</p>
+  <div style="height:100%;width:100%;position:relative">
+    <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start">
+      <div style="height:100%;width:100%;position:relative">
+        <p id="4" style="font-size:16px">Searching</p>
+        <p id="5" style="font-size:12px">One moment...</p>
+      </div>
+    </div>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
   </div>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
 </div>
