--- a/test/wv/html_fixtures/highlander.html
+++ b/test/wv/html_fixtures/highlander.html
@@ -1,9 +1,13 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:40px">
-    <p id="4" style="font-size:12px">Found 0 likely duplicates.</p>
-    <select id="5" onchange="scarpeHandler('5-change', this.options[this.selectedIndex].value)"></select><button id="6" onclick="scarpeHandler('6-click')" onmouseover="scarpeHandler('6-hover')">Refresh the list!</button>
-    <p id="7" style="font-size:12px">(Click on a list item for details)</p>
-    <button id="8" onclick="scarpeHandler('8-click')" onmouseover="scarpeHandler('8-hover')">There Can Be Only One!</button></div>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
+  <div style="height:100%;width:100%;position:relative">
+    <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:40px">
+      <div style="height:100%;width:100%;position:relative">
+        <p id="4" style="font-size:12px">Found 0 likely duplicates.</p>
+        <select id="5" onchange="scarpeHandler('5-change', this.options[this.selectedIndex].value)"></select><button id="6" onclick="scarpeHandler('6-click')" onmouseover="scarpeHandler('6-hover')">Refresh the list!</button>
+        <p id="7" style="font-size:12px">(Click on a list item for details)</p>
+        <button id="8" onclick="scarpeHandler('8-click')" onmouseover="scarpeHandler('8-hover')">There Can Be Only One!</button></div>
+    </div>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
+  </div>
 </div>
