--- a/test/wv/html_fixtures/link.html
+++ b/test/wv/html_fixtures/link.html
@@ -1,5 +1,7 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <p id="4" style="font-size:12px">'Scarpe' means shoes in Italian. 'Scarpe' also means Shoes in...<a id="3" onclick="scarpeHandler('3-click')">(show more)</a></p>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
+  <div style="height:100%;width:100%;position:relative">
+    <p id="4" style="font-size:12px">'Scarpe' means shoes in Italian. 'Scarpe' also means Shoes in...<a id="3" onclick="scarpeHandler('3-click')">(show more)</a></p>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
+  </div>
 </div>
