--- a/test/wv/html_fixtures/list_box.html
+++ b/test/wv/html_fixtures/list_box.html
@@ -1,9 +1,15 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:40px">
-    <div id="4" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:10px">
-      <p id="5" style="font-size:12px">Name</p>
-      <select id="6" onchange="scarpeHandler('6-change', this.options[this.selectedIndex].value)"><option value="Phyllis">Phyllis</option><option value="Ronald">Ronald</option><option value="Wyatt">Wyatt</option></select></div>
+  <div style="height:100%;width:100%;position:relative">
+    <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:40px">
+      <div style="height:100%;width:100%;position:relative">
+        <div id="4" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:10px">
+          <div style="height:100%;width:100%;position:relative">
+            <p id="5" style="font-size:12px">Name</p>
+            <select id="6" onchange="scarpeHandler('6-change', this.options[this.selectedIndex].value)"><option value="Phyllis">Phyllis</option><option value="Ronald">Ronald</option><option value="Wyatt">Wyatt</option></select></div>
+        </div>
+      </div>
+    </div>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
   </div>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
 </div>
