--- a/test/wv/html_fixtures/progress.html
+++ b/test/wv/html_fixtures/progress.html
@@ -1,16 +1,24 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div id="3" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
-    <div id="4" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:50.0%">
-      <p id="5" style="font-size:12px">this is initally at 30%</p>
-      <progress id="6" role="progressbar" aria-valuenow="0.3" aria-valuemin="0.0" aria-valuemax="1.0" max="1" value="0.3"></progress>
-      <p id="7" style="font-size:12px">this is initally at 60%</p>
-      <progress id="8" role="progressbar" aria-valuenow="0.6" aria-valuemin="0.0" aria-valuemax="1.0" max="1" value="0.6"></progress>
-      <p id="9" style="font-size:12px">this is initally at 80%</p>
-      <progress id="10" role="progressbar" aria-valuenow="0.8" aria-valuemin="0.0" aria-valuemax="1.0" max="1" value="0.8"></progress>
-      <p id="11" style="font-size:12px">this is a normal progress bar with no initial value</p>
-      <progress id="12" role="progressbar" aria-valuemin="0.0" aria-valuemax="1.0" max="1"></progress></div>
-    <div id="13" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:50.0%"><button id="14" onclick="scarpeHandler('14-click')" onmouseover="scarpeHandler('14-hover')">Start</button></div>
+  <div style="height:100%;width:100%;position:relative">
+    <div id="3" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
+      <div style="height:100%;width:100%;position:relative">
+        <div id="4" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:50.0%">
+          <div style="height:100%;width:100%;position:relative">
+            <p id="5" style="font-size:12px">this is initally at 30%</p>
+            <progress id="6" role="progressbar" aria-valuenow="0.3" aria-valuemin="0.0" aria-valuemax="1.0" max="1" value="0.3"></progress>
+            <p id="7" style="font-size:12px">this is initally at 60%</p>
+            <progress id="8" role="progressbar" aria-valuenow="0.6" aria-valuemin="0.0" aria-valuemax="1.0" max="1" value="0.6"></progress>
+            <p id="9" style="font-size:12px">this is initally at 80%</p>
+            <progress id="10" role="progressbar" aria-valuenow="0.8" aria-valuemin="0.0" aria-valuemax="1.0" max="1" value="0.8"></progress>
+            <p id="11" style="font-size:12px">this is a normal progress bar with no initial value</p>
+            <progress id="12" role="progressbar" aria-valuemin="0.0" aria-valuemax="1.0" max="1"></progress></div>
+        </div>
+        <div id="13" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:50.0%">
+          <div style="height:100%;width:100%;position:relative"><button id="14" onclick="scarpeHandler('14-click')" onmouseover="scarpeHandler('14-hover')">Start</button></div>
+        </div>
+      </div>
+    </div>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
   </div>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
 </div>
