--- a/test/wv/html_fixtures/ruby_racer.html
+++ b/test/wv/html_fixtures/ruby_racer.html
@@ -1,17 +1,27 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div id="3" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
-    <div id="4" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:45.0%;margin:5px">
-      <p id="5" style="font-size:14px">Racer 1</p>
-      <textarea id="6" oninput="scarpeHandler('6-change', this.value)" style="width:100%;height:100px">for i in 1..10n  a = "1"nendn</textarea>
+  <div style="height:100%;width:100%;position:relative">
+    <div id="3" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
+      <div style="height:100%;width:100%;position:relative">
+        <div id="4" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:45.0%;margin:5px">
+          <div style="height:100%;width:100%;position:relative">
+            <p id="5" style="font-size:14px">Racer 1</p>
+            <textarea id="6" oninput="scarpeHandler('6-change', this.value)" style="width:100%;height:100px">for i in 1..10n  a = "1"nendn</textarea>
+          </div>
+        </div>
+        <div id="7" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:45.0%;margin:5px">
+          <div style="height:100%;width:100%;position:relative">
+            <p id="8" style="font-size:14px">Racer 2</p>
+            <textarea id="9" oninput="scarpeHandler('9-change', this.value)" style="width:100%;height:100px">10.times don  a = "1"nendn</textarea>
+          </div>
+        </div>
+      </div>
     </div>
-    <div id="7" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:45.0%;margin:5px">
-      <p id="8" style="font-size:14px">Racer 2</p>
-      <textarea id="9" oninput="scarpeHandler('9-change', this.value)" style="width:100%;height:100px">10.times don  a = "1"nendn</textarea>
+    <div id="10" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:10px">
+      <div style="height:100%;width:100%;position:relative"><button id="11" onclick="scarpeHandler('11-click')" onmouseover="scarpeHandler('11-hover')">Race!</button>
+        <p id="12" style="font-size:12px"></p>
+      </div>
     </div>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
   </div>
-  <div id="10" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:10px"><button id="11" onclick="scarpeHandler('11-click')" onmouseover="scarpeHandler('11-hover')">Race!</button>
-    <p id="12" style="font-size:12px"></p>
-  </div>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
 </div>
