--- a/test/wv/html_fixtures/selfitude.html
+++ b/test/wv/html_fixtures/selfitude.html
@@ -1,6 +1,10 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start"></div>
-  <button id="4" onclick="scarpeHandler('4-click')" onmouseover="scarpeHandler('4-hover')">Clickity</button>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
+  <div style="height:100%;width:100%;position:relative">
+    <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start">
+      <div style="height:100%;width:100%;position:relative"></div>
+    </div>
+    <button id="4" onclick="scarpeHandler('4-click')" onmouseover="scarpeHandler('4-hover')">Clickity</button>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
+  </div>
 </div>
