--- a/test/wv/html_fixtures/simpler-menu.html
+++ b/test/wv/html_fixtures/simpler-menu.html
@@ -1,24 +1,34 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div id="3" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:175px;height:120px;margin:4px;background:rgba(0, 128, 0, 255)">
-    <div id="4" style="text-align:center;width:100%">
-      <p style="margin:18px;font-size:20px">Box 1</p>
+  <div style="height:100%;width:100%;position:relative">
+    <div id="3" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:175px;height:120px;margin:4px;background:rgba(0, 128, 0, 255)">
+      <div style="height:100%;width:100%;position:relative">
+        <div id="4" style="text-align:center;width:100%">
+          <p style="margin:18px;font-size:20px">Box 1</p>
+        </div>
+      </div>
     </div>
-  </div>
-  <div id="5" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:140px;height:120px;margin:4px;background:rgba(0, 0, 255, 255)">
-    <div id="6" style="text-align:center;width:100%">
-      <p style="margin:18px;font-size:20px">Box 2</p>
+    <div id="5" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:140px;height:120px;margin:4px;background:rgba(0, 0, 255, 255)">
+      <div style="height:100%;width:100%;position:relative">
+        <div id="6" style="text-align:center;width:100%">
+          <p style="margin:18px;font-size:20px">Box 2</p>
+        </div>
+      </div>
     </div>
-  </div>
-  <div id="7" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:135px;height:120px;margin:4px;background:rgba(255, 0, 0, 255)">
-    <div id="8" style="text-align:center;width:100%">
-      <p style="margin:18px;font-size:20px">Box 3</p>
+    <div id="7" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:135px;height:120px;margin:4px;background:rgba(255, 0, 0, 255)">
+      <div style="height:100%;width:100%;position:relative">
+        <div id="8" style="text-align:center;width:100%">
+          <p style="margin:18px;font-size:20px">Box 3</p>
+        </div>
+      </div>
     </div>
-  </div>
-  <div id="9" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:125px;height:120px;margin:4px;background:rgba(128, 0, 128, 255)">
-    <div id="10" style="text-align:center;width:100%">
-      <p style="margin:18px;font-size:20px">Box 4</p>
+    <div id="9" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:125px;height:120px;margin:4px;background:rgba(128, 0, 128, 255)">
+      <div style="height:100%;width:100%;position:relative">
+        <div id="10" style="text-align:center;width:100%">
+          <p style="margin:18px;font-size:20px">Box 4</p>
+        </div>
+      </div>
     </div>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
   </div>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
 </div>
