--- a/test/wv/html_fixtures/spacing.html
+++ b/test/wv/html_fixtures/spacing.html
@@ -1,16 +1,26 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:50px;background:purple">
-    <p id="4" style="color:#FFFFFF;font-size:12px">with 50px margin</p>
+  <div style="height:100%;width:100%;position:relative">
+    <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:50px;background:purple">
+      <div style="height:100%;width:100%;position:relative">
+        <p id="4" style="color:#FFFFFF;font-size:12px">with 50px margin</p>
+      </div>
+    </div>
+    <div id="5" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin-left:10px;margin-right:10px;margin-bottom:20px;background:red">
+      <div style="height:100%;width:100%;position:relative">
+        <p id="6" style="color:#FFFFFF;font-size:12px">with 10px margin-left and margin-right, and 20px margin-bottom</p>
+      </div>
+    </div>
+    <div id="7" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin-left:15px;margin-right:15px;margin-bottom:40px;background:blue">
+      <div style="height:100%;width:100%;position:relative">
+        <p id="8" style="color:#FFFFFF;font-size:12px">with 15px margin-left and margin-right, and 40px margin-bottom</p>
+      </div>
+    </div>
+    <div id="9" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin-left:20px;margin-right:30px;margin-bottom:10px;background:green">
+      <div style="height:100%;width:100%;position:relative">
+        <p id="10" style="color:#FFFFFF;font-size:12px">with 20px margin-left, 30px margin-right, and 10px margin-bottom</p>
+      </div>
+    </div>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
   </div>
-  <div id="5" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin-left:10px;margin-right:10px;margin-bottom:20px;background:red">
-    <p id="6" style="color:#FFFFFF;font-size:12px">with 10px margin-left and margin-right, and 20px margin-bottom</p>
-  </div>
-  <div id="7" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin-left:15px;margin-right:15px;margin-bottom:40px;background:blue">
-    <p id="8" style="color:#FFFFFF;font-size:12px">with 15px margin-left and margin-right, and 40px margin-bottom</p>
-  </div>
-  <div id="9" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin-left:20px;margin-right:30px;margin-bottom:10px;background:green">
-    <p id="10" style="color:#FFFFFF;font-size:12px">with 20px margin-left, 30px margin-right, and 10px margin-bottom</p>
-  </div>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
 </div>
