--- a/test/wv/html_fixtures/span.html
+++ b/test/wv/html_fixtures/span.html
@@ -1,8 +1,12 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:10px"><span stroke="blue" fill="green" id="4" style="color:blue;font-size:span">TEXT EDITOR</span>
-    <p id="5" style="color:#FF0000;font-size:12px"><span stroke="blue" fill="green" id="4" style="color:blue;font-size:span">TEXT EDITOR</span> * USE ALT-Q TO QUIT</p>
+  <div style="height:100%;width:100%;position:relative">
+    <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:10px">
+      <div style="height:100%;width:100%;position:relative"><span id="4" style="color:blue;font-size:span">TEXT EDITOR</span>
+        <p id="5" style="color:#FF0000;font-size:12px"><span id="4" style="color:blue;font-size:span">TEXT EDITOR</span> * USE ALT-Q TO QUIT</p>
+      </div>
+    </div>
+    <span id="6" style="font-size:span">text</span>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
   </div>
-  <span id="6" style="font-size:span">text</span>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
 </div>
