--- a/test/wv/html_fixtures/text_sizes.html
+++ b/test/wv/html_fixtures/text_sizes.html
@@ -1,12 +1,14 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <p id="3" style="font-size:48px">Banner</p>
-  <p id="4" style="font-size:34px">Title</p>
-  <p id="5" style="font-size:26px">Subtitle</p>
-  <p id="6" style="font-size:18px">Tagline</p>
-  <p id="7" style="font-size:14px">Caption</p>
-  <p id="8" style="font-size:12px">Para</p>
-  <p id="9" style="font-size:10px">Inscription</p>
-  <p id="10" style="font-size:10px">Inscription via ins</p>
-  <div id="root-fonts"></div>
-  <div id="root-alerts"> </div>
+  <div style="height:100%;width:100%;position:relative">
+    <p id="3" style="font-size:48px">Banner</p>
+    <p id="4" style="font-size:34px">Title</p>
+    <p id="5" style="font-size:26px">Subtitle</p>
+    <p id="6" style="font-size:18px">Tagline</p>
+    <p id="7" style="font-size:14px">Caption</p>
+    <p id="8" style="font-size:12px">Para</p>
+    <p id="9" style="font-size:10px">Inscription</p>
+    <p id="10" style="font-size:10px">Inscription via ins</p>
+    <div id="root-fonts"></div>
+    <div id="root-alerts"> </div>
+  </div>
 </div>
