--- a/test/wv/html_fixtures/oval-with-kwargs.html
+++ b/test/wv/html_fixtures/oval-with-kwargs.html
@@ -1,6 +1,6 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
   <div style="height:100%;width:100%;position:relative">
-    <div id="3" style="position:absolute;top:20px;left:20px;width:320px;height:320px"><svg width="320" height="320" style="fill:#FF00FF;"><ellipse cx="160" cy="160" rx="160" ry="160" style="stroke:black;stroke-width:2;" /></svg></div>
+    <div id="3" style="position:absolute;top:calc(100% - 140px);left:calc(100% - 140px);width:320px;height:320px"><svg width="320" height="320" style="fill:#FF00FF;"><ellipse cx="160" cy="160" rx="160" ry="160" style="stroke:black;stroke-width:2;" /></svg></div>
     <div id="root-fonts"></div>
     <div id="root-alerts"> </div>
   </div>
