--- a/test/wv/html_fixtures/rect.html
+++ b/test/wv/html_fixtures/rect.html
@@ -1,6 +1,6 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
   <p id="3" style="font-size:12px">Behold, the mighty rectangle!</p>
-  <div id="4" style="position:absolute;top:10px;left:10px;width:75px;height:50px"><svg width="85" height="60"><rect x="10" y="10" width="75" height="50" style="stroke:" rx="5" transform="rotate(0 42 30)" /></svg></div>
+  <div id="4" style="position:absolute;top:10px;left:10px;width:75px;height:50px"><svg width="85" height="60"><rect x="10" y="10" width="75" height="50" rx="5" transform="rotate( 42 30)" /></svg></div>
   <div id="root-fonts"></div>
   <div id="root-alerts"> </div>
 </div>
