Change how TextDrawables initialize and work, and which methods are inherited where.
Add extra TextDrawables like del, ins, sub, sup.
Bring TextDrawable up to date with default values, etc.
More tests, and replacing some old ones with the new interface.

--- a/test/wv/html_fixtures/shoes_splorer.html
+++ b/test/wv/html_fixtures/shoes_splorer.html
@@ -1,14 +1,14 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
   <div style="height:100%;width:100%;position:relative">
     <p id="3" style="font-size:12px">What Shoes methods are available?</p>
-    <p id="5" style="color:#008000;font-size:12px"><strong> animate[Woot!] </strong></p>
-    <p id="14" style="color:#FFA500;font-size:12px">o<code>arrow</code> o<code>arc</code> o<code>line</code> o<code>oval</code> o<code>rect</code> o<code>star</code> o<code>shape</code> x<code>mask</code> </p>
-    <p id="16" style="color:#008000;font-size:12px"><strong> element[Woot!] </strong></p>
-    <p id="30" style="color:#FFA500;font-size:12px">x<code>mouse</code> o<code>motion</code> x<code>resize</code> o<code>hover</code> o<code>leave</code> o<code>keypress</code> x<code>keyrelease</code> x<code>append</code> x<code>visit</code> x<code>scroll_top</code> x<code>clipboard</code> o<code>download</code> x<code>gutter</code> </p>
-    <p id="34" style="color:#FFA500;font-size:12px">o<code>image</code> o<code>video</code> x<code>sound</code> </p>
-    <p id="37" style="color:#FF0000;font-size:12px"><em> xxx</em>setup<em>xxx </em></p>
-    <p id="48" style="color:#FFA500;font-size:12px">o<code>style</code> o<code>fill</code> o<code>stroke</code> x<code>cap</code> o<code>rotate</code> o<code>strokewidth</code> x<code>transform</code> x<code>translate</code> o<code>nostroke</code> o<code>nofill</code> </p>
-    <p id="67" style="color:#FFA500;font-size:12px">o<code>banner</code> o<code>title</code> o<code>subtitle</code> o<code>tagline</code> o<code>caption</code> o<code>para</code> o<code>inscription</code> o<code>code</code> x<code>del</code> o<code>em</code> o<code>ins</code> x<code>sub</code> x<code>sup</code> o<code>strong</code> x<code>fg</code> x<code>bg</code> o<code>link</code> o<code>span</code> </p>
+    <p id="5" style="color:#008000;font-size:12px"><strong class="id_4"> animate[Woot!] </strong></p>
+    <p id="14" style="color:#FFA500;font-size:12px">o<code class="id_6">arrow</code> o<code class="id_7">arc</code> o<code class="id_8">line</code> o<code class="id_9">oval</code> o<code class="id_10">rect</code> o<code class="id_11">star</code> o<code class="id_12">shape</code> x<code class="id_13">mask</code> </p>
+    <p id="16" style="color:#008000;font-size:12px"><strong class="id_15"> element[Woot!] </strong></p>
+    <p id="30" style="color:#FFA500;font-size:12px">x<code class="id_17">mouse</code> o<code class="id_18">motion</code> x<code class="id_19">resize</code> o<code class="id_20">hover</code> o<code class="id_21">leave</code> o<code class="id_22">keypress</code> x<code class="id_23">keyrelease</code> x<code class="id_24">append</code> x<code class="id_25">visit</code> x<code class="id_26">scroll_top</code> x<code class="id_27">clipboard</code> o<code class="id_28">download</code> x<code class="id_29">gutter</code> </p>
+    <p id="34" style="color:#FFA500;font-size:12px">o<code class="id_31">image</code> o<code class="id_32">video</code> x<code class="id_33">sound</code> </p>
+    <p id="37" style="color:#FF0000;font-size:12px"><em class="id_35"> xxx</em>setup<em class="id_36">xxx </em></p>
+    <p id="48" style="color:#FFA500;font-size:12px">o<code class="id_38">style</code> o<code class="id_39">fill</code> o<code class="id_40">stroke</code> x<code class="id_41">cap</code> o<code class="id_42">rotate</code> o<code class="id_43">strokewidth</code> x<code class="id_44">transform</code> x<code class="id_45">translate</code> o<code class="id_46">nostroke</code> o<code class="id_47">nofill</code> </p>
+    <p id="67" style="color:#FFA500;font-size:12px">o<code class="id_49">banner</code> o<code class="id_50">title</code> o<code class="id_51">subtitle</code> o<code class="id_52">tagline</code> o<code class="id_53">caption</code> o<code class="id_54">para</code> o<code class="id_55">inscription</code> o<code class="id_56">code</code> o<code class="id_57">del</code> o<code class="id_58">em</code> o<code class="id_59">ins</code> o<code class="id_60">sub</code> o<code class="id_61">sup</code> o<code class="id_62">strong</code> x<code class="id_63">fg</code> x<code class="id_64">bg</code> o<code class="id_65">link</code> o<code class="id_66">span</code> </p>
     <div id="root-fonts"></div>
     <div id="root-alerts"> </div>
   </div>
