--- a/test/wv/html_fixtures/simple_slides.html
+++ b/test/wv/html_fixtures/simple_slides.html
@@ -4,7 +4,7 @@
       <div style="height:100%;width:100%;position:relative"></div>
     </div>
     <button id="4" onclick="scarpeHandler('4-click')" onmouseover="scarpeHandler('4-hover')">Previous Slide</button><button id="5" onclick="scarpeHandler('5-click')" onmouseover="scarpeHandler('5-hover')">Next Slide</button>
-    <p id="7" style="margin-bottom:10px;font-size:12px"><strong>Slide 1: Welcome to Shoes!</strong></p>
+    <p id="7" style="margin-bottom:10px;font-size:12px"><strong class="id_6">Slide 1: Welcome to Shoes!</strong></p>
     <p id="8" style="font-size:12px">Ah, yeah, Shoes!<br>
             Who said nobody knows Shoes? Well, let me introduce you to a feline expert in the art of Ruby Desktop GUI Libs.<br>
       <br>
