--- a/test/wv/html_fixtures/span.html
+++ b/test/wv/html_fixtures/span.html
@@ -1,11 +1,13 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
   <div style="height:100%;width:100%;position:relative">
     <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:10px">
-      <div style="height:100%;width:100%;position:relative"><span id="4" style="color:blue;font-size:span">TEXT EDITOR</span>
-        <p id="5" style="color:#FF0000;font-size:12px"><span id="4" style="color:blue;font-size:span">TEXT EDITOR</span> * USE ALT-Q TO QUIT</p>
+      <div style="height:100%;width:100%;position:relative">
+        <p id="5" style="color:#FF0000;font-size:12px"><span class="id_4" style="color:#0000FF;background-color:#008000">TEXT EDITOR</span> * USE ALT-Q TO QUIT</p>
       </div>
     </div>
-    <span id="6" style="font-size:span">text</span>
+    <p id="10" style="font-size:12px">Various <del class="id_6">text</del> in <sub class="id_7">various</sub> <sup class="id_8">styles</sup> can be <span class="id_9" style="text-decoration-line:underline"><span class="id_9">hard to read</span></span>...<br>
+    </p>
+    <p id="15" style="font-size:12px">A <span class="id_11" style="text-decoration-color:#0000FF;text-decoration-line:underline"><span class="id_11">wide</span></span> <span class="id_12" style="text-decoration-color:#008000;text-decoration-line:underline;text-decoration-style:wavy"><span class="id_12">variety</span></span> <span class="id_13" style="text-decoration-line:underline;text-decoration-style:double"><span class="id_13">of</span></span> <span class="id_14" style="text-decoration-color:#006400;text-decoration-line:underline;text-underline-offset:0.3rem"><span class="id_14">underlines</span></span></p>
     <div id="root-fonts"></div>
     <div id="root-alerts"> </div>
   </div>
