--- a/test/wv/html_fixtures/para_font_variant.html
+++ b/test/wv/html_fixtures/para_font_variant.html
@@ -1,8 +1,7 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
   <div style="height:100%;width:100%;position:relative">
-    <p id="3" style="font:Arial;font-size:20px">Hello, world!</p>
-    <p id="4" style="font:Courier;font-size:20px">Hello, world!</p>
-    <p id="5" style="font:MS Gothic;font-size:20px">Hello, world!</p>
+    <p id="3" style="font-variant:normal;font-size:12px">This is Normal Variant</p>
+    <p id="4" style="font-variant:small-caps;font-size:12px">This is Small Caps Variant </p>
     <div id="root-fonts"></div>
     <div id="root-alerts"> </div>
   </div>
