bundle exec rake test:regenerate_html_fixtures

--- a/test/wv/html_fixtures/url_routing_example.html
+++ b/test/wv/html_fixtures/url_routing_example.html
@@ -2,7 +2,7 @@
   <div style="height:100%;width:100%;position:relative">
     <p id="3" style="font-size:34px">Home Page</p>
     <p id="4" style="font-size:10px">Welcome to the advanced URL routing example!</p>
-    <button id="5" onclick="scarpeHandler('5-click')" onmouseover="scarpeHandler('5-hover')" style="width:80px">About</button><button id="6" onclick="scarpeHandler('6-click')" onmouseover="scarpeHandler('6-hover')" style="width:80px">Contact</button><button id="7" onclick="scarpeHandler('7-click')" onmouseover="scarpeHandler('7-hover')" style="width:80px">User 42</button><button id="8" onclick="scarpeHandler('8-click')" onmouseover="scarpeHandler('8-hover')" style="width:80px">Product XYZ</button>
+    <button id="5" onclick="scarpeHandler('5-click')" onmouseover="scarpeHandler('5-hover')" style="width:80px">About</button><button id="6" onclick="scarpeHandler('6-click')" onmouseover="scarpeHandler('6-hover')" style="width:80px">Contact</button><button id="7" onclick="scarpeHandler('7-click')" onmouseover="scarpeHandler('7-hover')" style="width:80px">User 42</button><input id="8" type="password" oninput="scarpeHandler('8-change', this.value)" onmouseover="scarpeHandler('8-hover')" value="1" style="width:40%;font:;color:" /><button id="9" onclick="scarpeHandler('9-click')" onmouseover="scarpeHandler('9-hover')" style="width:80px">Pick a user</button><button id="10" onclick="scarpeHandler('10-click')" onmouseover="scarpeHandler('10-hover')" style="width:80px">Product XYZ</button>
     <div id="root-fonts"></div>
     <div id="root-alerts"> </div>
   </div>
