--- a/test/wv/html_fixtures/edit_box.html
+++ b/test/wv/html_fixtures/edit_box.html
@@ -1,5 +1,5 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative">
+  <div style="height:100%;width:100%;position:relative;display:contents">
     <p id="3" style="font-size:12px">Manuscript:</p>
     <textarea id="4" oninput="scarpeHandler('4-change', this.value)" onmouseover="scarpeHandler('4-hover')" style="width:100%">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</textarea>
     <p id="5" style="font-size:12px">141 characters</p>
