--- a/test/wv/html_fixtures/font_shorthand.html
+++ b/test/wv/html_fixtures/font_shorthand.html
@@ -1,5 +1,5 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative">
+  <div style="height:100%;width:100%;position:relative;display:contents">
     <p id="3" style="font-size:30px;font-family:cursive;font-weight:bold;font-style:italic">The family is not in font so it will change but size won't</p>
     <p id="4" style="font-size:16px;font-weight:bold">because  only things things who aren't present in font </p>
     <p id="5" style="font-size:20px;font-family:cursive;font-weight:bold;font-style:italic">will be used as their specific property</p>
