--- a/test/wv/html_fixtures/motion_events.html
+++ b/test/wv/html_fixtures/motion_events.html
@@ -1,10 +1,10 @@
-<div onmousemove="scarpeHandler('10-motion', arguments[0].x, arguments[0].y, arguments[0].ctrlKey, arguments[0].shiftKey)" id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative">
+<div onmousemove="scarpeHandler('10-motion', (function(e){ var r = e.currentTarget.getBoundingClientRect(); return e.clientX - r.left; })(arguments[0]), (function(e){ var r = e.currentTarget.getBoundingClientRect(); return e.clientY - r.top; })(arguments[0]), arguments[0].ctrlKey, arguments[0].shiftKey)" id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
+  <div style="height:100%;width:100%;position:relative;display:contents">
     <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start">
       <div style="height:100%;width:100%;position:relative">
         <p id="4" style="font-size:12px">Events and Menus</p>
-        <div onclick="scarpeHandler('7-click', arguments[0].button, arguments[0].x, arguments[0].y)" onmouseenter="scarpeHandler('8-hover')" id="5" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
-          <div style="height:100%;width:100%;position:relative"><button id="6" onclick="scarpeHandler('6-click')" onmouseover="scarpeHandler('6-hover')" style="width:75px">button 1</button></div>
+        <div onclick="scarpeHandler('7-click', arguments[0].button, (function(e){ var r = e.currentTarget.getBoundingClientRect(); return e.clientX - r.left; })(arguments[0]), (function(e){ var r = e.currentTarget.getBoundingClientRect(); return e.clientY - r.top; })(arguments[0]))" onmouseenter="scarpeHandler('8-hover')" id="5" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
+          <div style="height:100%;width:100%;position:relative;display:contents"><button id="6" onclick="scarpeHandler('6-click')" onmouseover="scarpeHandler('6-hover')" style="width:75px">button 1</button></div>
         </div>
         <textarea id="9" oninput="scarpeHandler('9-change', this.value)" onmouseover="scarpeHandler('9-hover')" style="width:500px;height:350px"></textarea>
       </div>
