--- a/test/wv/html_fixtures/edit_line.html
+++ b/test/wv/html_fixtures/edit_line.html
@@ -1,5 +1,5 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative">
+  <div style="height:100%;width:100%;position:relative;display:contents">
     <p id="3" style="font-size:12px">Name:</p>
     <input id="4" type="text" oninput="scarpeHandler('4-change', this.value)" onmouseover="scarpeHandler('4-hover')" value="John" style="width:100%;font:;color:" />
     <p id="5" style="font-size:12px">Hello John!</p>
