--- a/test/wv/html_fixtures/fonts.html
+++ b/test/wv/html_fixtures/fonts.html
@@ -1,5 +1,5 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative">
+  <div style="height:100%;width:100%;position:relative;display:contents">
     <p id="3" style="font-size:20px;font-family:Arial">Hello, world!</p>
     <p id="4" style="font-size:20px;font-family:Courier">Hello, world!</p>
     <p id="5" style="font-size:20px;font-family:MS Gothic">Hello, world!</p>
