--- a/test/wv/html_fixtures/get_headers.html
+++ b/test/wv/html_fixtures/get_headers.html
@@ -1,5 +1,5 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative">
+  <div style="height:100%;width:100%;position:relative;display:contents">
     <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start">
       <div style="height:100%;width:100%;position:relative">
         <p id="4" style="font-size:16px">Searching</p>
