--- a/test/wv/html_fixtures/list_box.html
+++ b/test/wv/html_fixtures/list_box.html
@@ -1,5 +1,5 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative">
+  <div style="height:100%;width:100%;position:relative;display:contents">
     <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin-left:40px;margin-right:40px;margin-top:40px;margin-bottom:40px">
       <div style="height:100%;width:100%;position:relative">
         <div id="4" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin-left:10px;margin-right:10px;margin-top:10px;margin-bottom:10px">
