--- a/test/wv/html_fixtures/oval.html
+++ b/test/wv/html_fixtures/oval.html
@@ -1,21 +1,21 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative">
+  <div style="height:100%;width:100%;position:relative;display:contents">
     <div id="3" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:200px">
-      <div style="height:100%;width:100%;position:relative">
+      <div style="height:100%;width:100%;position:relative;display:contents">
         <p id="4" style="font-size:12px">Positional arguments:</p>
-        <div id="5" style="position:absolute;top:30px;left:30px;width:160px;height:200px"><svg width="160" height="200" style="fill:black;"><ellipse cx="80" cy="100" rx="80" ry="100" style="stroke:black;stroke-width:2;" /></svg></div>
+        <div id="5" style="position:absolute;top:30px;left:30px;width:160px;height:200px"><svg width="160" height="200"><ellipse cx="80" cy="100" rx="80" ry="100" style="fill:black;stroke:black;stroke-width:2;" /></svg></div>
       </div>
     </div>
     <div id="6" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:200px">
-      <div style="height:100%;width:100%;position:relative">
+      <div style="height:100%;width:100%;position:relative;display:contents">
         <p id="7" style="font-size:12px">As a circle</p>
-        <div id="8" style="position:absolute;top:30px;left:30px;width:160px;height:160px"><svg width="160" height="160" style="fill:pink;"><ellipse cx="80" cy="80" rx="80" ry="80" style="stroke:blue;stroke-width:2;" /></svg></div>
+        <div id="8" style="position:absolute;top:30px;left:30px;width:160px;height:160px"><svg width="160" height="160"><ellipse cx="80" cy="80" rx="80" ry="80" style="fill:pink;stroke:blue;stroke-width:2;" /></svg></div>
       </div>
     </div>
     <div id="9" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:200px">
-      <div style="height:100%;width:100%;position:relative">
+      <div style="height:100%;width:100%;position:relative;display:contents">
         <p id="10" style="font-size:12px">Keyword arguments:</p>
-        <div id="11" style="position:absolute;top:20px;left:20px;width:90px;height:160px"><svg width="90" height="160" style="fill:green;"><ellipse cx="45" cy="80" rx="45" ry="80" style="stroke:red;stroke-width:4;" /></svg></div>
+        <div id="11" style="position:absolute;top:20px;left:20px;width:90px;height:160px"><svg width="90" height="160"><ellipse cx="45" cy="80" rx="45" ry="80" style="fill:green;stroke:red;stroke-width:4;" /></svg></div>
       </div>
     </div>
     <div id="root-fonts"></div>
