--- a/test/wv/html_fixtures/para_font_styles.html
+++ b/test/wv/html_fixtures/para_font_styles.html
@@ -1,5 +1,5 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative">
+  <div style="height:100%;width:100%;position:relative;display:contents">
     <p id="3" style="font-size:12px;font-style:italic">this text is in normal styl</p>
     <p id="4" style="font-size:16px;font-family:'Times New Roman', serif;;font-weight:bold;font-style:italic">this text is in italic style</p>
     <p id="5" style="font-size:12px;font-family:'Pacifico', cursive;">this text is in oblique style </p>
