--- a/test/wv/html_fixtures/para_fontweight.html
+++ b/test/wv/html_fixtures/para_fontweight.html
@@ -1,5 +1,5 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative">
+  <div style="height:100%;width:100%;position:relative;display:contents">
     <p id="3" style="font-size:12px">This is normal</p>
     <p id="4" style="font-size:12px;font-weight:bold">This is bolder</p>
     <p id="5" style="font-size:12px;font-weight:800">This is a little less bold</p>
