--- a/test/wv/html_fixtures/para_text_widgets.html
+++ b/test/wv/html_fixtures/para_text_widgets.html
@@ -1,5 +1,5 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative">
+  <div style="height:100%;width:100%;position:relative;display:contents">
     <p id="3" style="font-size:12px">This is simple.</p>
     <p id="7" style="font-size:12px">This has <em class="id_4">emphasis</em> and great <strong class="id_5">strength</strong> and <code class="id_6">coolness</code>.</p>
     <div id="root-fonts"></div>
